# report-killer

./: .gitignore  ARCHITECTURE.md  DEMO.md  IMPROVEMENTS_v0.2.1.md  IMPROVEMENTS_v0.2.2.md  IMPROVEMENTS_v0.2.3.md  PROJECT_SUMMARY.md  QUICKREF_v0.2.3.md  README.md  README_v0.2.md  SETUP.md  SUMMARY_v0.2.3.md  TESTING.md  pyproject.toml  test_all_features.sh  test_v0.2.3.py  test_workflow.sh  verify_implementation.py
report_killer/: __init__.py  agent.py  agent_old.py  chart_generator.py  cli.py  cli_old.py  code_executor.py  config.py  docx_handler.py  docx_handler_old.py
tests/: README  test_ai_doc.docx  test_ai_doc_fixed.docx  test_ai_doc_output.docx
